# handler/user.go
@@ -11,8 +11,38 @@ import (
 func (h *Handler) initUserGroup(api *gin.Engine) {
 	user := api.Group("/api/users")
 
+	user.GET(("/random/:count"), h.handlerGetRandomUser)
+
 	user.Use(authMiddleware(h.tokenMaker))
+	user.GET("/", h.handleGetLoggedInUser)
 	user.DELETE("/", h.handlerDeleteUser)
+}
+
+// handlerGetLoggedInUser function
+// @Summary Get logged in user
+// @Description Get logged in user
+// @Tags users
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Success 200 {object} responses.UserResponse
+// @Failure 400 {object} responses.ErrorMessage
+// @Router /users [get]
+func (h *Handler) handleGetLoggedInUser(c *gin.Context) {
+	authPayload := c.MustGet(authorizationPayloadKey).(*token.Payload)
+	email, err := h.services.User.GetUserByEmail(authPayload.Email)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+
+	res, err := h.services.User.GetUserByEmail(email.Email)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+
+	c.JSON(http.StatusOK, res)
 }
 
 // handlerDeleteUser function
@@ -34,6 +64,32 @@ func (h *Handler) handlerDeleteUser(c *gin.Context) {
 	}
 
 	res, err := h.services.User.DeleteUserById(userId)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, errorResponse(err))
+		return
+	}
+
+	c.JSON(http.StatusOK, res)
+}
+
+// handlerGetRandomUser function
+// @Summary Get random user
+// @Description Get random user
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param count path int true "Count"
+// @Success 200 {object} []responses.UserResponse
+// @Failure 400 {object} responses.ErrorMessage
+// @Router /users/random/{count} [get]
+func (h *Handler) handlerGetRandomUser(c *gin.Context) {
+	count, err := strconv.Atoi(c.Param("count"))
+	if err != nil {
+		c.JSON(http.StatusBadRequest, errorResponse(err))
+		return
+	}
+
+	res, err := h.services.User.GetRandomUser(count)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, errorResponse(err))
 		return
